--- a/about.html
+++ b/about.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
 </head>
 <body>
-    <h1>Hello this is NayChi</h1>
-    
+    <h1>I am junior web developer and this is my first js.</h1>
 </body>
 </html>
